--- a/releases.yml
+++ b/releases.yml
@@ -1,6 +1,13 @@
 - type: replace
   path: /releases/-
   value:
+    name: notifications
+    version: ((notifications_release_version))
+    url: ((notifications_release_path))
+
+- type: replace
+  path: /releases/-
+  value:
     name: notifications-ui
     version: ((notifications_ui_release_version))
     url: ((notifications_ui_release_path))
