--- a/releases.yml
+++ b/releases.yml
@@ -36,7 +36,7 @@
 - type: replace
   path: /releases/-
   value:
-    name: push-apps-manager
+    name: push-apps-manager-release
     version: ((push_apps_manager_release_version))
     url: ((push_apps_manager_release_path))
 
