Append smoke-tests to list of instance groups
[#135447889]

--- a/smoke-tests.yml
+++ b/smoke-tests.yml
@@ -1,5 +1,5 @@
 - type: replace
-  path: /instance_groups/name=smoke-tests?
+  path: /instance_groups/-
   value:
     name: smoke-tests
     azs: [z1]
