Networks section must be hash in smoke-tests
[#135447889]

--- a/smoke-tests.yml
+++ b/smoke-tests.yml
@@ -6,7 +6,8 @@
     instances: 1
     vm_type: t2.small
     stemcell: default
-    networks: [private]
+    networks:
+    - name: private
     lifecycle: errand
     jobs:
     - name: smoke-tests
