Add internet required to smoke-tests since they talk to CF api
[#135447889]

--- a/smoke-tests.yml
+++ b/smoke-tests.yml
@@ -9,6 +9,8 @@
     networks:
     - name: private
     lifecycle: errand
+    vm_extensions:
+    - cf-internet-required
     jobs:
     - name: smoke-tests
       release: cf
