--- a/releases.yml
+++ b/releases.yml
@@ -60,3 +60,10 @@
     name: service-backup
     version: ((service_backup_release_version))
     url: ((service_backup_release_path))
+
+- type: replace
+  path: /releases/-
+  value:
+    name: pivotal-account
+    version: ((pivotal_account_release_version))
+    url: ((pivotal_account_release_path))
