--- a/pivotal-defaults.yml
+++ b/pivotal-defaults.yml
@@ -1,3 +1,7 @@
 - type: replace
   path: /instance_groups/name=diego-cell/jobs/name=garden?/properties/garden/graph_cleanup_threshold_in_mb
   value: 10_240
+
+- type: replace
+  path: /instance_groups/name=router/jobs/name=gorouter?/properties/router/tracing/enable_zipkin
+  value: true
