push-apps-manager is correctly marked as an errand
[#135459695]

--- a/push-apps-manager.yml
+++ b/push-apps-manager.yml
@@ -8,6 +8,7 @@
     stemcell: default
     networks:
     - name: private
+    lifecycle: errand
     vm_extensions:
     - cf-internet-required
     jobs:
