Set system domain organization to system, as needed by Apps Manager
[#135459691]

--- a/pivotal-defaults.yml
+++ b/pivotal-defaults.yml
@@ -5,3 +5,15 @@
 - type: replace
   path: /instance_groups/name=router/jobs/name=gorouter?/properties/router/tracing/enable_zipkin
   value: true
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/system_domain_organization
+  value: system
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_worker?/properties/system_domain_organization
+  value: system
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/system_domain_organization
+  value: system
