--- a/pivotal-defaults.yml
+++ b/pivotal-defaults.yml
@@ -17,3 +17,11 @@
 - type: replace
   path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/system_domain_organization
   value: system
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/cc/quota_definitions/runaway
+  value:
+    memory_limit: 102400
+    total_services: -1
+    total_routes: 1000
+    non_basic_services_allowed: true
