--- a/push-apps-manager.yml
+++ b/push-apps-manager.yml
@@ -51,7 +51,7 @@
           app_usage_service:
             name: app_usage_db_service
             port: 3306 # TODO: Linkify
-            ip: 10.0.31.193 # TODO: Linkify
+            ip: "p-mysql-ert.((system_domain))"
             username: app_usage_db_user
             password: ((app_usage_db_password))
         ssl:
