Clarify pivotal-defaults.yml

--- a/pivotal-defaults.yml
+++ b/pivotal-defaults.yml
@@ -1,10 +1,16 @@
+# Garden cleanup
+
 - type: replace
   path: /instance_groups/name=diego-cell/jobs/name=garden?/properties/garden/graph_cleanup_threshold_in_mb
   value: 10_240
 
+# Zipkin
+
 - type: replace
   path: /instance_groups/name=router/jobs/name=gorouter?/properties/router/tracing/enable_zipkin
   value: true
+
+# System domain
 
 - type: replace
   path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/system_domain_organization
@@ -18,6 +24,8 @@
   path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/system_domain_organization
   value: system
 
+# Runaway quota
+
 - type: replace
   path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/cc/quota_definitions/runaway
   value:
@@ -25,6 +33,8 @@
     total_services: -1
     total_routes: 1000
     non_basic_services_allowed: true
+
+# Apps domain
 
 - type: replace
   path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/app_domains
