--- a/pivotal-defaults.yml
+++ b/pivotal-defaults.yml
@@ -50,3 +50,65 @@
   path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/app_domains
   value:
   - ((apps_domain))
+
+# App security groups
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/cc/security_group_definitions
+  value:
+  - name: default_security_group
+    rules:
+      - protocol: all
+        destination: 0.0.0.0-169.253.255.255
+      - protocol: all
+        destination: 169.255.0.0-255.255.255.255
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/cc/default_running_security_groups
+  value:
+  - default_security_group
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng?/properties/cc/default_staging_security_groups
+  value:
+  - default_security_group
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_worker?/properties/cc/security_group_definitions
+  value:
+  - name: default_security_group
+    rules:
+      - protocol: all
+        destination: 0.0.0.0-169.253.255.255
+      - protocol: all
+        destination: 169.255.0.0-255.255.255.255
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_worker?/properties/cc/default_running_security_groups
+  value:
+  - default_security_group
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_worker?/properties/cc/default_staging_security_groups
+  value:
+  - default_security_group
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/cc/security_group_definitions
+  value:
+  - name: default_security_group
+    rules:
+      - protocol: all
+        destination: 0.0.0.0-169.253.255.255
+      - protocol: all
+        destination: 169.255.0.0-255.255.255.255
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/cc/default_running_security_groups
+  value:
+  - default_security_group
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock?/properties/cc/default_staging_security_groups
+  value:
+  - default_security_group
