Fix typo in deploy-autoscaling
[#135459985]

--- a/deploy-autoscaling.yml
+++ b/deploy-autoscaling.yml
@@ -12,7 +12,7 @@
     vm_extensions:
     - cf-internet-required
     jobs:
-    - name: deploy-notifications
+    - name: deploy-autoscaling
       release: cf-autoscaling
       properties:
         app_domains:
