Fix name of autoscale_db_password variable
[#135459981]

Signed-off-by: Derek Richard <drichard@pivotal.io>

--- a/deploy-autoscaling.yml
+++ b/deploy-autoscaling.yml
@@ -55,7 +55,7 @@
 - type: replace
   path: /variables/-
   value:
-    name: notifications_db_password
+    name: autoscale_db_password
     type: password
 
 - type: replace
