Switch from cf-internet-required vm_extension to internet-required
Tracks cf-deployment develop

[#136991783]

--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -135,7 +135,7 @@ vm_extensions:
       size: 1048576
       type: pd-standard
 
-- name: cf-internet-required
+- name: internet-required
   cloud_properties:
     ephemeral_external_ip: true
 - name: cf-internet-not-required
