--- a/mysql-proxy.yml
+++ b/mysql-proxy.yml
@@ -11,7 +11,7 @@
       static_ips:
       - 10.0.1.199
     vm_extensions:
-    - cf-internet-required
+    - internet-required
     jobs:
     - name: consul_agent
       release: consul
