--- a/push-apps-manager.yml
+++ b/push-apps-manager.yml
@@ -10,7 +10,7 @@
     - name: private
     lifecycle: errand
     vm_extensions:
-    - cf-internet-required
+    - internet-required
     jobs:
     - name: push-apps-manager
       release: push-apps-manager-release
