--- a/push-pivotal-account.yml
+++ b/push-pivotal-account.yml
@@ -9,7 +9,7 @@
     networks:
     - name: private
     vm_extensions:
-    - cf-internet-required
+    - internet-required
     jobs:
     - name: push-pivotal-account
       release: pivotal-account
