--- a/errands/deploy-notifications.yml
+++ b/errands/deploy-notifications.yml
@@ -21,7 +21,7 @@
         notifications:
           app_domain: ((system_domain))
           network: notifications
-          sender: ((notifications_sender_email))
+          sender: ((smtp_sender_username))
           encryption_key: ((notifications_encryption_key))
           enable_diego: true
           instance_count: 3
