Add internet_required which is a duplicate of cf-internet-required
[#137405997]

Signed-off-by: Derek Richard <drichard@pivotal.io>

--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -135,6 +135,11 @@ vm_extensions:
       size: 1048576
       type: pd-standard
 
+# to support both p-mysql and p-ert
+- name: internet-required
+  cloud_properties:
+    ephemeral_external_ip: true
+
 - name: cf-internet-required
   cloud_properties:
     ephemeral_external_ip: true
