Be more explicit with usage of "?" in replace statements
- This will lead to better errors if these properties/jobs move unexpectedly

[#137578219]

--- a/errands/deploy-notifications-ui.yml
+++ b/errands/deploy-notifications-ui.yml
@@ -38,7 +38,7 @@
             client_secret: ((notifications_ui_client_password))
 
 - type: replace
-  path: /instance_groups/name=uaa?/jobs/name=uaa/properties/uaa/clients/notifications_ui_client
+  path: /instance_groups/name=uaa/jobs/name=uaa/properties/uaa/clients/notifications_ui_client?
   value:
     id: notifications_ui_client
     secret: ((notifications_ui_client_password))
