--- a/errands/deploy-notifications.yml
+++ b/errands/deploy-notifications.yml
@@ -54,7 +54,7 @@
     type: password
 
 - type: replace
-  path: /instance_groups/name=uaa?/jobs/name=uaa/properties/uaa/clients/notifications
+  path: /instance_groups/name=uaa/jobs/name=uaa/properties/uaa/clients/notifications?
   value:
     id: notifications
     secret: ((notifications_client_password))
@@ -68,7 +68,7 @@
     type: password
 
 - type: replace
-  path: /instance_groups/name=mysql?/jobs/name=mysql/properties/cf_mysql/mysql/seeded_databases/-
+  path: /instance_groups/name=mysql/jobs/name=mysql/properties/cf_mysql/mysql/seeded_databases/-
   value:
     name: notifications
     username: notifications
