--- a/ip-overrides.yml
+++ b/ip-overrides.yml
@@ -10,3 +10,33 @@
   value:
   - 10.0.1.197
   - 10.0.1.198
+
+- type: replace
+  path: /instance_groups/name=mysql/networks/name=private/static_ips
+  value:
+  - &mysql_ip 10.0.1.193
+
+- type: replace
+  path: /instance_groups/name=mysql/jobs/name=mysql/properties/cf_mysql/mysql/cluster_ips
+  value:
+  - *mysql_ip
+
+- type: replace
+  path: /instance_groups/name=uaa/jobs/name=uaa/properties/uaadb/address
+  value: *mysql_ip
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties/ccdb/address
+  value: *mysql_ip
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_worker/properties/ccdb/address
+  value: *mysql_ip
+
+- type: replace
+  path: /instance_groups/name=diego-bbs/jobs/name=bbs/properties/diego/bbs/sql/db_host
+  value: *mysql_ip
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock/properties/ccdb/address
+  value: *mysql_ip
