--- a/ip-overrides.yml
+++ b/ip-overrides.yml
@@ -1,13 +1,13 @@
 - type: replace
   path: /instance_groups/name=consul/networks/name=private/static_ips
-  value:
+  value: &consul_ips
   - 10.0.1.194
   - 10.0.1.195
   - 10.0.1.196
 
 - type: replace
   path: /instance_groups/name=nats/networks/name=private/static_ips
-  value:
+  value: &nats_ips
   - 10.0.1.197
   - 10.0.1.198
 
@@ -15,6 +15,119 @@
   path: /instance_groups/name=mysql/networks/name=private/static_ips
   value:
   - &mysql_ip 10.0.1.193
+
+# ------ insert correct ips -------
+- type: replace
+  path: /instance_groups/name=tcp-router/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=tcp-emitter/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=consul/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=etcd/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=nats/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=mysql/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=diego-bbs/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=diego-brain/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=diego-cell/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=router/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=uaa/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=route-emitter/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=blobstore/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=cc_bridge/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=doppler/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=log_controller/jobs/name=consul_agent/properties/consul/agent/servers/lan
+  value: *consul_ips
+
+- type: replace
+  path: /instance_groups/name=log_controller/jobs/name=route_registrar/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=nats/jobs/name=nats_stream_forwarder/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=uaa/jobs/name=route_registrar/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=route_registrar/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=blobstore/jobs/name=route_registrar/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=router/jobs/name=gorouter/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=route-emitter/jobs/name=route_emitter/properties/diego/route_emitter/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=cc_clock/jobs/name=cloud_controller_clock/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_worker/properties/nats/machines
+  value: *nats_ips
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties/nats/machines
+  value: *nats_ips
 
 - type: replace
   path: /instance_groups/name=mysql/jobs/name=mysql/properties/cf_mysql/mysql/cluster_ips
@@ -31,6 +144,10 @@
 
 - type: replace
   path: /instance_groups/name=api/jobs/name=cloud_controller_worker/properties/ccdb/address
+  value: *mysql_ip
+
+- type: replace
+  path: /instance_groups/name=api/jobs/name=routing-api/properties/routing_api/sqldb/host
   value: *mysql_ip
 
 - type: replace
