Don't wrap the nats_ips array in another array
Signed-off-by: Dan Wendorf <dwendorf@pivotal.io>

--- a/aws/ip-overrides.yml
+++ b/aws/ip-overrides.yml
@@ -186,4 +186,4 @@
 
 - type: replace
   path: /instance_groups/name=mysql_proxy/jobs/name=proxy/properties/nats/machines
-  value: [*nats_ips]
+  value: *nats_ips
