push-apps-manager gets 5GB ephemeral disk
[#139050463]

Signed-off-by: Dan Wendorf <dwendorf@pivotal.io>

--- a/errands/push-apps-manager.yml
+++ b/errands/push-apps-manager.yml
@@ -11,6 +11,7 @@
     lifecycle: errand
     vm_extensions:
     - cf-internet-required
+    - 5GB_ephemeral_disk
     jobs:
     - name: push-apps-manager
       release: push-apps-manager-release
